# simple-ci-demo

./: CMakeLists.txt
.github/workflows/: main.yml
